--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,41 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ul {
+  background-color: #12263A;
+}
+
+ul h2 {
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px;
+  font-size: 20px;
+}
+
+.container {
+
+
+  }
+
+  form {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+
+form h2 {
+  text-align: center;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.btn-color{
+  background-color: #C5D8D1;
+}
+
+button {
+  margin-top: 20px;
+}
+
